[package]
name = "hanger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
serde = { features = ["derive"], version = "1.0" }
serde_json = "1.0.137"
dotenv = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
libsql = "0.6.0"
